@@ -56,9 +56,10 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-04-30 13:19:35 L.245'38425 T1468619283.K ~107 +----+----+----+----+----+
-     TimeCnt : //z 2015-04-29 11:40:16 L.246'44384 T1556651858.K ~4   +----+----+----+----+----+
-     Reg.Cnt : //z 2015-04-30 13:19:18 L.245'38442 T1468619220.K ~6   +----+----+----+----+----+
+     Zndex_E : //z 2015-04-30 15:29:39 L.245'30621 T4052741146.K ~116 +----+----+----+----+----+
+     TimeCnt : //z 2015-04-30 15:29:27 L.245'30633 T4052741111.K ~5   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-04-30 15:28:39 L.245'30681 T4052705209.K ~7   +----+----+----+----+----+
+     #7   R+ : //z 2015-04-30 15:28:39 L.245'30681 T4052705209.K ~7     V+.117  L+.176  
      #6   R+ : //z 2015-04-30 13:19:18 L.245'38442 T1468619220.K ~6     V+.109  L+.169  
      #5   R+ : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~5     V+.102  L+.162  
      #4   R+ : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~4     V+.46   L+.132  
@@ -66,7 +67,9 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-04-30 13:19:35 L.245'38425 T1468619283.K ~113   R+.6    L+.168  --+----+
+     Version : //z 2015-04-30 15:29:39 L.245'30621 T4052741146.K ~123   R+.7    L+.177  --+----+
+     #6   R+ : //z 2015-04-30 15:28:39 L.245'30681 T4052705209.K ~117   R+.7    L+.177  V+.117  
+     #6   V+ : //z 2015-04-30 15:28:34 L.245'30686 T4052705204.K ~114   R+.6    L+.172  
      #5   R+ : //z 2015-04-30 13:19:18 L.245'38442 T1468619220.K ~109   R+.6    L+.170  V+.109  
      #5   R+ : //z 2015-04-28 16:26:55 L.247'27185 T3649066941.K ~102   R+.5    L+.163  V+.102  
      #5   V+ : //z 2015-04-27 17:54:13 L.248'21947 T581251992 .K ~95    R+.4    L+.156  
@@ -168,3 +171,8 @@ http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html
 #region 04-30 13:19 R#.6    @EA公司发表自制的EASTL规格 游戏开发方面对STL的性能及功能需求的特点
 01. 
 #endregion //z 2015-04-30 13:19:18 L.245'38442 BG57IV3@XCL T1468619220.K.F4146951713-+----+----+
+
+#region 04-30 15:28 R#.7    @参考下 cp 上的 tl 功能，看能否增强n.tl
+//z 2015-04-30 15:29:27 L.245'30633 T4052741111.K[T5,L176,R7,V122]
+01. 了解下。
+#endregion //z 2015-04-30 15:28:39 L.245'30681 BG57IV3@XCL T4052705209.K.F4146951713-+----+----+
